Add parameters HAND_CONTACTS/{handle_contacts, laterality, used_fingers} in the default configuration file of module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -76,6 +76,11 @@ v_stride            2
 handle_occlusion    true
 laterality          right
 
+[HAND_CONTACTS]
+handle_contacts     true
+laterality          right
+used_fingers        (index, middle, ring, little)
+
 [SIMULATION]
 sample_time         0.03
 duration            20.0
