Update default configuration file of module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -106,15 +106,20 @@ back_culling        true
 
 [OBJECT]
 object_name         ycb_mustard
+
+[BBOX_ESTIMATOR]
 iol_object_name     Bottle
 use_bbox_0          true
 bbox_tl_0           (156.0, 98.0)
 bbox_br_0           (212.0, 182.0)
+cov_0               (0.001, 0.001, 0.001, 0.001)
+Q                   (0.001, 0.001, 0.001, 0.001)
+R                   (0.001, 0.001, 0.001, 0.001)
 
 [LOG]
 enable_log          false
 absolute_log_path
 
 [MISC]
-send_bbox           true
+send_hull           true
 send_mask           true
