Add flag for enabling/disabling torso in module object-tracking-manipulation

--- a/src/object-tracking-manipulation/conf/manipulation_config.ini
+++ b/src/object-tracking-manipulation/conf/manipulation_config.ini
@@ -2,7 +2,8 @@ robot                   icub
 
 period                  0.02
 
-enable_torso            right
+enable_torso            true
+torso_laterality        right
 
 limit_torso_pitch       true
 max_torso_pitch         25.0
