--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -110,6 +110,8 @@ object_name         ycb_mustard
 [BBOX_ESTIMATOR]
 iol_object_name     Bottle
 use_bbox_0          true
+#bbox_tl_0           (144.0, 65.0)
+#bbox_br_0           (208.0, 162.0)
 bbox_tl_0           (156.0, 98.0)
 bbox_br_0           (212.0, 182.0)
 cov_0               (0.001, 0.001, 0.001, 0.001)
