--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -6,19 +6,18 @@
 mode                robot
 robot               icub
 # filter can assume values 'ukf' or 'upf'
-filter_type         ukf
+filter_type         upf
 
 [PARTICLES]
-number              5
+number              10
 
 [LIKELIHOOD]
 variance            0.05
 
 [POINT_ESTIMATE]
 # Used in the UPF
-method              smean
-# warning: this affects also the projection on the 2d plane
-window_size         10
+method              emode
+window_size         6
 
 [INITIAL_CONDITION]
 # Used in the UKF
@@ -43,6 +42,9 @@ center_0            (0.0, 0.0, 0.0)
 radius_0            (0.4, 0.4, 0.4)
 
 [KINEMATIC_MODEL]
+# for ukf
+# -q_x              (0.03, 0.03, 0.03)
+# -q_eul            (0.09, 0.09, 0.09)
 q_x                 (0.03, 0.03, 0.03)
 q_eul               (0.09, 0.09, 0.09)
 
@@ -112,8 +114,8 @@ iol_object_name     Bottle
 use_bbox_0          true
 #bbox_tl_0           (144.0, 65.0)
 #bbox_br_0           (208.0, 162.0)
-bbox_tl_0           (156.0, 98.0)
-bbox_br_0           (212.0, 182.0)
+bbox_tl_0           (145.0, 85.0)
+bbox_br_0           (220.0, 195.0)
 cov_0               (0.001, 0.001, 0.001, 0.001)
 Q                   (0.001, 0.001, 0.001, 0.001)
 R                   (0.001, 0.001, 0.001, 0.001)
