Disable torso in default configuration file of module hand-tracking-manipulation

--- a/src/object-tracking-manipulation/conf/manipulation_config.ini
+++ b/src/object-tracking-manipulation/conf/manipulation_config.ini
@@ -2,7 +2,7 @@ robot                   icub
 
 period                  0.02
 
-enable_torso            true
+enable_torso            false
 torso_laterality        right
 
 limit_torso_pitch       true
