--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -111,6 +111,7 @@ object_name         ycb_mustard
 
 [BBOX_ESTIMATOR]
 iol_object_name     Bottle
+iol_bbox_scale      1.2
 use_bbox_0          true
 #bbox_tl_0           (144.0, 65.0)
 #bbox_br_0           (208.0, 162.0)
