--- a/src/object-tracking/CMakeLists.txt
+++ b/src/object-tracking/CMakeLists.txt
@@ -189,8 +189,61 @@ set(${EXE_TARGET_NAME}_SHADER_FRAG
         ${CMAKE_CURRENT_SOURCE_DIR}/shader/shader_background.frag
 )
 
-set(${EXE_TARGET_NAME}_YCB_MUSTARD     ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mustard/nontextured.ply ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mustard/nontextured.obj)
-set(${EXE_TARGET_NAME}_YCB_POWER_DRILL ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_power_drill/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_ADJUSTABLE_WRENCH    ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_adjustable_wrench/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_APPLE                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_apple/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_BANANA               ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_banana/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_BASEBALL             ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_baseball/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_BLEACH_CLEANSER      ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_bleach_cleanser/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_BOWL                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_bowl/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_CHAIN                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_chain/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_CHIPS_CAN            ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_chips_can/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_CRACKER_BOX          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_cracker_box/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_DICE                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_dice/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_EXTRA_LARGE_CLAMP    ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_extra_large_clamp/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_FLAT_SCREWDRIVER     ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_flat_screwdriver/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_FOAM_BRICK           ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_foam_brick/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_FORK                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_fork/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_GELATIN_BOX          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_gelatin_box/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_GOLF_BALL            ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_golf_ball/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_HAMMER               ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_hammer/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_KEY                  ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_key/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_KNIFE                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_knife/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_LARGE_CLAMP          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_large_clamp/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_LARGE_MARKER         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_large_marker/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_LEMON                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_lemon/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_MASTER_CHEF_CAN      ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_master_chef_can/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_MEDIUM_CLAMP         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_medium_clamp/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_MINI_SOCCER_BALL     ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mini_soccer_ball/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_MUG                  ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mug/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_MUSTARD_BOTTLE       ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mustard_bottle/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_ORANGE               ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_orange/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_PADLOCK              ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_padlock/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_PEACH                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_peach/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_PEAR                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_pear/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_PHILLIPS_SCREWDRIVER ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_phillips_screwdriver/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_PITCHER_BASE         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_pitcher_base/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_PLATE                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_plate/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_PLUM                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_plum/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_POTTED_MEAT_CAN      ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_potted_meat_can/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_POWER_DRILL          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_power_drill/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_PUDDING_BOX          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_pudding_box/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_RACQUETBALL          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_racquetball/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_RUBIKS_CUBE          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_rubiks_cube/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_SCISSORS             ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_scissors/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_SKILLET              ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_skillet/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_SMALL_CLAMP          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_small_clamp/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_SMALL_MARKER         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_small_marker/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_SOFTBALL             ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_softball/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_SPATULA              ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_spatula/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_SPONGE               ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_sponge/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_SPOON                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_spoon/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_STRAWBERRY           ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_strawberry/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_SUGAR_BOX            ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_sugar_box/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_TENNIS_BALL          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_tennis_ball/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_TIMER                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_timer/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_TOMATO_SOUP_CAN      ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_tomato_soup_can/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_TUNA_FISH_CAN        ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_tuna_fish_can/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_WINDEX_BOTTLE        ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_windex_bottle/nontextured.ply)
 
 set(${EXE_TARGET_NAME}_ICUB_RIGHT_HAND_MESHES
         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/icub_right_arm/r_ail0.obj
@@ -231,8 +284,61 @@ file(GLOB ${EXE_TARGET_NAME}_XML ${CMAKE_CURRENT_SOURCE_DIR}/app/scripts/*.xml)
 yarp_install(FILES ${${EXE_TARGET_NAME}_CONF}                           DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking)
 yarp_install(FILES ${${EXE_TARGET_NAME}_SHADER_VERT}                    DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/shader)
 yarp_install(FILES ${${EXE_TARGET_NAME}_SHADER_FRAG}                    DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/shader)
-yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_MUSTARD}                    DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_mustard)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_ADJUSTABLE_WRENCH}          DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_adjustable_wrench)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_APPLE}                      DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_apple)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_BANANA}                     DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_banana)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_BASEBALL}                   DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_baseball)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_BLEACH_CLEANSER}            DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_bleach_cleanser)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_BOWL}                       DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_bowl)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_CHAIN}                      DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_chain)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_CHIPS_CAN}                  DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_chips_can)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_CRACKER_BOX}                DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_cracker_box)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_DICE}                       DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_dice)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_EXTRA_LARGE_CLAMP}          DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_extra_large_clamp)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_FLAT_SCREWDRIVER}           DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_flat_screwdriver)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_FOAM_BRICK}                 DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_foam_brick)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_FORK}                       DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_fork)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_GELATIN_BOX}                DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_gelatin_box)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_GOLF_BALL}                  DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_golf_ball)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_HAMMER}                     DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_hammer)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_KEY}                        DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_key)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_KNIFE}                      DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_knife)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_LARGE_CLAMP}                DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_large_clamp)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_LARGE_MARKER}               DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_large_marker)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_LEMON}                      DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_lemon)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_MASTER_CHEF_CAN}            DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_master_chef_can)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_MEDIUM_CLAMP}               DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_medium_clamp)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_MINI_SOCCER_BALL}           DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_mini_soccer_ball)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_MUG}                        DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_mug)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_MUSTARD_BOTTLE}             DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_mustard_bottle)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_ORANGE}                     DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_orange)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_PADLOCK}                    DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_padlock)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_PEACH}                      DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_peach)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_PEAR}                       DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_pear)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_PHILLIPS_SCREWDRIVER}       DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_phillips_screwdriver)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_PITCHER_BASE}               DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_pitcher_base)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_PLATE}                      DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_plate)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_PLUM}                       DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_plum)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_POTTED_MEAT_CAN}            DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_potted_meat_can)
 yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_POWER_DRILL}                DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_power_drill)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_PUDDING_BOX}                DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_pudding_box)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_RACQUETBALL}                DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_racquetball)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_RUBIKS_CUBE}                DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_rubiks_cube)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_SCISSORS}                   DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_scissors)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_SKILLET}                    DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_skillet)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_SMALL_CLAMP}                DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_small_clamp)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_SMALL_MARKER}               DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_small_marker)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_SOFTBALL}                   DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_softball)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_SPATULA}                    DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_spatula)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_SPONGE}                     DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_sponge)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_SPOON}                      DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_spoon)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_STRAWBERRY}                 DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_strawberry)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_SUGAR_BOX}                  DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_sugar_box)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_TENNIS_BALL}                DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_tennis_ball)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_TIMER}                      DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_timer)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_TOMATO_SOUP_CAN}            DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_tomato_soup_can)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_TUNA_FISH_CAN}              DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_tuna_fish_can)
+yarp_install(FILES ${${EXE_TARGET_NAME}_YCB_WINDEX_BOTTLE}              DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/ycb_windex_bottle)
 yarp_install(FILES ${${EXE_TARGET_NAME}_ICUB_RIGHT_HAND_MESHES}         DESTINATION ${ICUBCONTRIB_CONTEXTS_INSTALL_DIR}/object-tracking/mesh/icub_right_arm)
 yarp_install(FILES ${${EXE_TARGET_NAME}_XML}                            DESTINATION ${ICUBCONTRIB_APPLICATIONS_INSTALL_DIR})
 
