Change default configuration file for module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -113,14 +113,14 @@ object_name         ycb_mustard
 [BBOX_ESTIMATOR]
 iol_object_name     Bottle
 iol_bbox_scale      1.2
-use_bbox_0          true
+use_bbox_0          false
 #bbox_tl_0           (144.0, 65.0)
 #bbox_br_0           (208.0, 162.0)
 bbox_tl_0           (145.0, 85.0)
 bbox_br_0           (220.0, 195.0)
 cov_0               (0.001, 0.001, 0.001, 0.001)
 Q                   (0.001, 0.001, 0.001, 0.001)
-R                   (0.001, 0.001, 0.001, 0.001)
+R                   (0.001, 0.001, 0.1, 0.1)
 
 [LOG]
 enable_log          false
