Add YCB dataset in .obj format

--- a/src/object-tracking/CMakeLists.txt
+++ b/src/object-tracking/CMakeLists.txt
@@ -189,61 +189,116 @@ set(${EXE_TARGET_NAME}_SHADER_FRAG
         ${CMAKE_CURRENT_SOURCE_DIR}/shader/shader_background.frag
 )
 
-set(${EXE_TARGET_NAME}_YCB_ADJUSTABLE_WRENCH    ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_adjustable_wrench/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_APPLE                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_apple/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_BANANA               ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_banana/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_BASEBALL             ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_baseball/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_BLEACH_CLEANSER      ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_bleach_cleanser/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_BOWL                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_bowl/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_CHAIN                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_chain/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_CHIPS_CAN            ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_chips_can/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_CRACKER_BOX          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_cracker_box/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_DICE                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_dice/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_EXTRA_LARGE_CLAMP    ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_extra_large_clamp/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_FLAT_SCREWDRIVER     ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_flat_screwdriver/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_FOAM_BRICK           ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_foam_brick/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_FORK                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_fork/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_GELATIN_BOX          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_gelatin_box/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_GOLF_BALL            ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_golf_ball/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_HAMMER               ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_hammer/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_KEY                  ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_key/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_KNIFE                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_knife/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_LARGE_CLAMP          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_large_clamp/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_LARGE_MARKER         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_large_marker/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_LEMON                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_lemon/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_MASTER_CHEF_CAN      ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_master_chef_can/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_MEDIUM_CLAMP         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_medium_clamp/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_MINI_SOCCER_BALL     ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mini_soccer_ball/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_MUG                  ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mug/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_MUSTARD_BOTTLE       ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mustard_bottle/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_ORANGE               ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_orange/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_PADLOCK              ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_padlock/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_PEACH                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_peach/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_PEAR                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_pear/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_PHILLIPS_SCREWDRIVER ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_phillips_screwdriver/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_PITCHER_BASE         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_pitcher_base/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_PLATE                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_plate/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_PLUM                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_plum/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_POTTED_MEAT_CAN      ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_potted_meat_can/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_POWER_DRILL          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_power_drill/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_PUDDING_BOX          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_pudding_box/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_RACQUETBALL          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_racquetball/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_RUBIKS_CUBE          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_rubiks_cube/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_SCISSORS             ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_scissors/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_SKILLET              ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_skillet/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_SMALL_CLAMP          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_small_clamp/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_SMALL_MARKER         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_small_marker/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_SOFTBALL             ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_softball/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_SPATULA              ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_spatula/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_SPONGE               ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_sponge/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_SPOON                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_spoon/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_STRAWBERRY           ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_strawberry/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_SUGAR_BOX            ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_sugar_box/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_TENNIS_BALL          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_tennis_ball/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_TIMER                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_timer/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_TOMATO_SOUP_CAN      ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_tomato_soup_can/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_TUNA_FISH_CAN        ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_tuna_fish_can/nontextured.ply)
-set(${EXE_TARGET_NAME}_YCB_WINDEX_BOTTLE        ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_windex_bottle/nontextured.ply)
+set(${EXE_TARGET_NAME}_YCB_ADJUSTABLE_WRENCH    ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_adjustable_wrench/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_adjustable_wrench/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_APPLE                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_apple/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_apple/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_BANANA               ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_banana/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_banana/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_BASEBALL             ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_baseball/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_baseball/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_BLEACH_CLEANSER      ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_bleach_cleanser/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_bleach_cleanser/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_BOWL                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_bowl/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_bowl/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_CHAIN                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_chain/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_chain/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_CHIPS_CAN            ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_chips_can/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_chips_can/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_CRACKER_BOX          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_cracker_box/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_cracker_box/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_DICE                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_dice/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_dice/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_EXTRA_LARGE_CLAMP    ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_extra_large_clamp/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_extra_large_clamp/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_FLAT_SCREWDRIVER     ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_flat_screwdriver/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_flat_screwdriver/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_FOAM_BRICK           ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_foam_brick/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_foam_brick/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_FORK                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_fork/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_fork/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_GELATIN_BOX          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_gelatin_box/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_gelatin_box/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_GOLF_BALL            ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_golf_ball/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_golf_ball/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_HAMMER               ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_hammer/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_hammer/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_KEY                  ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_key/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_key/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_KNIFE                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_knife/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_knife/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_LARGE_CLAMP          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_large_clamp/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_large_clamp/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_LARGE_MARKER         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_large_marker/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_large_marker/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_LEMON                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_lemon/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_lemon/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_MASTER_CHEF_CAN      ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_master_chef_can/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_master_chef_can/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_MEDIUM_CLAMP         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_medium_clamp/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_medium_clamp/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_MINI_SOCCER_BALL     ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mini_soccer_ball/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mini_soccer_ball/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_MUG                  ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mug/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mug/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_MUSTARD_BOTTLE       ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mustard_bottle/nontextured.obj
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_mustard_bottle/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_ORANGE               ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_orange/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_orange/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_PADLOCK              ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_padlock/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_padlock/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_PEACH                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_peach/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_peach/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_PEAR                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_pear/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_pear/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_PHILLIPS_SCREWDRIVER ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_phillips_screwdriver/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_phillips_screwdriver/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_PITCHER_BASE         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_pitcher_base/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_pitcher_base/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_PLATE                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_plate/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_plate/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_PLUM                 ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_plum/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_plum/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_POTTED_MEAT_CAN      ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_potted_meat_can/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_potted_meat_can/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_POWER_DRILL          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_power_drill/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_power_drill/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_PUDDING_BOX          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_pudding_box/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_pudding_box/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_RACQUETBALL          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_racquetball/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_racquetball/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_RUBIKS_CUBE          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_rubiks_cube/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_rubiks_cube/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_SCISSORS             ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_scissors/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_scissors/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_SKILLET              ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_skillet/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_skillet/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_SMALL_CLAMP          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_small_clamp/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_small_clamp/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_SMALL_MARKER         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_small_marker/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_small_marker/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_SOFTBALL             ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_softball/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_softball/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_SPATULA              ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_spatula/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_spatula/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_SPONGE               ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_sponge/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_sponge/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_SPOON                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_spoon/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_spoon/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_STRAWBERRY           ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_strawberry/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_strawberry/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_SUGAR_BOX            ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_sugar_box/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_sugar_box/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_TENNIS_BALL          ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_tennis_ball/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_tennis_ball/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_TIMER                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_timer/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_timer/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_TOMATO_SOUP_CAN      ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_tomato_soup_can/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_tomato_soup_can/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_TUNA_FISH_CAN        ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_tuna_fish_can/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_tuna_fish_can/nontextured.obj)
+set(${EXE_TARGET_NAME}_YCB_WINDEX_BOTTLE        ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_windex_bottle/nontextured.ply
+                                                ${CMAKE_CURRENT_SOURCE_DIR}/mesh/ycb_windex_bottle/nontextured.obj)
 
 set(${EXE_TARGET_NAME}_ICUB_RIGHT_HAND_MESHES
         ${CMAKE_CURRENT_SOURCE_DIR}/mesh/icub_right_arm/r_ail0.obj
