Add thresholds in springy fingers configuration files

--- a/src/object-tracking/conf/springy_calibration_left.ini
+++ b/src/object-tracking/conf/springy_calibration_left.ini
@@ -3,6 +3,9 @@ type      left
 robot     icub
 verbosity 1
 
+[thresholds]
+thresholds  (100.0, 100.0, 100.0, 100.0, 100.0)
+
 [thumb]
 name        thumb
 calib_vel   70
