--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -108,10 +108,10 @@ noise_std           (0.004, 0.004, 0.004)
 back_culling        true
 
 [OBJECT]
-object_name         ycb_mustard
+object_name         ycb_mustard_bottle
 
 [BBOX_ESTIMATOR]
-iol_object_name     Bottle
+iol_object_name     Object
 iol_bbox_scale      1.2
 use_bbox_0          false
 #bbox_tl_0           (144.0, 65.0)
