Add parameter MEASUREMENT_MODEL/tactile_covariance in default configuration file of module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -55,6 +55,7 @@ q_eul_dot           (0.01, 0.01, 0.01)
 
 [MEASUREMENT_MODEL]
 noise_covariance    (0.01, 0.01, 0.01)
+tactile_covariance  (0.1, 0.1, 0.1)
 
 [UNSCENTED_TRANSFORM]
 alpha               1.0
