Change default configuration file of module object-tracking

--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -112,7 +112,7 @@ back_culling        true
 object_name         ycb_mustard_bottle
 
 [BBOX_ESTIMATOR]
-iol_object_name     Object
+iol_object_name     Bottle
 iol_bbox_scale      1.2
 use_bbox_0          false
 #bbox_tl_0           (144.0, 65.0)
