[WIP] Partial implementation of class iCubFingersEncoders

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(gaze-ctrl-library)
+add_subdirectory(icub-fingers-encoders)
 add_subdirectory(sfm-library)
 add_subdirectory(object-tracking-depth)
 add_subdirectory(object-tracking)
