Fix missing configuration file in CMakeLists.txt of module object-tracking

--- a/src/object-tracking/CMakeLists.txt
+++ b/src/object-tracking/CMakeLists.txt
@@ -180,6 +180,7 @@ else()
 endif()
 
 set(${EXE_TARGET_NAME}_CONF
+    ${CMAKE_CURRENT_SOURCE_DIR}/conf/analogs_configuration.ini
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/config.ini
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/config_simulation.ini
     ${CMAKE_CURRENT_SOURCE_DIR}/conf/sfm_config.ini
