--- a/src/object-tracking/conf/analogs_configuration.ini
+++ b/src/object-tracking/conf/analogs_configuration.ini
@@ -4,6 +4,6 @@ bounds_col_0    (235.0, 209.0, 237.0, 245.0, 219.0, 233.0, 245.0, 217.0, 249.0, 
 bounds_col_1    (44.0,  14.0,  10.0,  14.0,  36.0,  0.0,   0.0,   6.0,   21.0,  3.0,   25.0,  0.0,   0.0,   39.0,  19.0,  0.0)
 
 [right]
-use_bounds      false
+use_bounds      true
 bounds_col_0    (224.0, 193.0, 242.0, 238.0, 221.0, 248.0, 248.0, 211.0, 229.0, 229.0, 213.0, 218.0, 232.0, 217.0, 243.0, 0.0)
 bounds_col_1    (65.0,  10.0,  26.0,  18.0,  16.0,  0.0,   6.0,   18.0,  0.0,   0.0,   12.0,  13.0,  19.0,  28.0,  0.0,   0.0)
