Use class iCubFingersEncoders to get encoders on iCub fingers in class iCubArmModel within module object-tracking-viewer

--- a/src/object-tracking-viewer/CMakeLists.txt
+++ b/src/object-tracking-viewer/CMakeLists.txt
@@ -66,6 +66,7 @@ target_link_libraries(${EXE_TARGET_NAME} PRIVATE
                                          iCubGazeCtrlLibrary
                                          SuperimposeMesh::SuperimposeMesh
                                          ${ICUB_LIBRARIES}
+                                         iCubFingersEncoders
                                          )
 
 set(${EXE_TARGET_NAME}_CONF ${CMAKE_CURRENT_SOURCE_DIR}/conf/config.ini)
