Use class iCubFingersEncoders to get encoders on iCub fingers in class iCubArmModel within module object-tracking

--- a/src/object-tracking/CMakeLists.txt
+++ b/src/object-tracking/CMakeLists.txt
@@ -140,6 +140,7 @@ target_link_libraries(${EXE_TARGET_NAME}
                       iCubGazeCtrlLibrary
                       ${OPENGL_LIBRARIES}
                       ${ICUB_LIBRARIES}
+                      iCubFingersEncoders
                       )
 
 if (USE_OPENMP)
