--- a/src/object-tracking/conf/config.ini
+++ b/src/object-tracking/conf/config.ini
@@ -55,7 +55,7 @@ q_eul_dot           (0.01, 0.01, 0.01)
 
 [MEASUREMENT_MODEL]
 noise_covariance    (0.01, 0.01, 0.01)
-tactile_covariance  (0.1, 0.1, 0.1)
+tactile_covariance  (0.01, 0.01, 0.01)
 
 [UNSCENTED_TRANSFORM]
 alpha               1.0
@@ -114,11 +114,11 @@ object_name         ycb_mustard_bottle
 [BBOX_ESTIMATOR]
 iol_object_name     Bottle
 iol_bbox_scale      1.2
-use_bbox_0          false
+use_bbox_0          true
 #bbox_tl_0           (144.0, 65.0)
 #bbox_br_0           (208.0, 162.0)
-bbox_tl_0           (145.0, 85.0)
-bbox_br_0           (220.0, 195.0)
+bbox_tl_0           (160.0, 100.0)
+bbox_br_0           (245.0, 220.0)
 cov_0               (0.001, 0.001, 0.001, 0.001)
 Q                   (0.001, 0.001, 0.001, 0.001)
 R                   (0.001, 0.001, 0.1, 0.1)
